--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="text_title_dialog_confira_logout">Deseja sair da sua conta?</string>
     <string name="text_button_dialog_confirm_logout">Confirmar</string>
     <string name="text_message_dialog_confirm_logout">Aperte em confirmar para sair</string>
+    <string name="text_message_recover_account_fragment">Digite seu e-mail para recuperar sua conta</string>
 
 
     <string name="description_empty_form_task_fragment">Preencha uma descrição!</string>
